--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,7 @@
 # -*- Makefile -*-
 
 AM_LDFLAGS = -static
-LDADD = util.la ../src/libseccomp.la
+LDADD = util.la ../src/libseccomp-internal.la
 
 check_LTLIBRARIES = util.la
 util_la_SOURCES = util.c util.h
