tests: Rename 23-sim-arch_all_basic to 23-sim-arch_all_le_basic
This test is for little endian architectures, so we rename it
to make that clear. This is in preparation for a new test,
identical to this one, which will test big-endian architectures.

Signed-off-by: Markos Chandras <markos.chandras@imgtec.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -60,7 +60,7 @@ TESTS = 01-sim-allow \
 	20-live-basic_die \
 	21-live-basic_allow \
 	22-sim-basic_chains_array \
-	23-sim-arch_all_basic \
+	23-sim-arch_all_le_basic \
 	24-live-arg_allow \
 	25-sim-multilevel_chains_adv
 
