tests: Add new test for big-endian architectures
The new test is similar to 23-sim-arch_all_le_basic

Signed-off-by: Markos Chandras <markos.chandras@imgtec.com>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -62,7 +62,8 @@ TESTS = 01-sim-allow \
 	22-sim-basic_chains_array \
 	23-sim-arch_all_le_basic \
 	24-live-arg_allow \
-	25-sim-multilevel_chains_adv
+	25-sim-multilevel_chains_adv \
+	26-sim-arch_all_be_basic
 
 DEPS_OBJS = $(OBJS:%.o=%.d)
 DEPS_TESTS = $(TESTS:%=%.d)
