--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,20 @@
-# -*- Makefile -*-
+####
+# Seccomp Library Source Files
+#
+
+#
+# This library is free software; you can redistribute it and/or modify it
+# under the terms of version 2.1 of the GNU Lesser General Public License
+# as published by the Free Software Foundation.
+#
+# This library is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser
+# General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public License
+# along with this library; if not, see <http://www.gnu.org/licenses>.
+#
 
 SUBDIRS = .
 if ENABLE_PYTHON
@@ -28,4 +44,3 @@ libseccomp_la_SOURCES = ${SOURCES}
 libseccomp_la_CFLAGS = -fvisibility=hidden
 libseccomp_la_LDFLAGS = \
 	-version-number ${VERSION_MAJOR}:${VERSION_MINOR}:${VERSION_MICRO}
-
