--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,13 +1,33 @@
-# -*- Makefile -*-
+####
+# Seccomp Library Utility Tools
+#
+
+#
+# This library is free software; you can redistribute it and/or modify it
+# under the terms of version 2.1 of the GNU Lesser General Public License
+# as published by the Free Software Foundation.
+#
+# This library is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser
+# General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public License
+# along with this library; if not, see <http://www.gnu.org/licenses>.
+#
 
 noinst_LTLIBRARIES = util.la
 util_la_SOURCES = util.c util.h
 util_la_LDFLAGS = -module
 
-bin_PROGRAMS    = scmp_sys_resolver
-noinst_PROGRAMS = scmp_arch_detect scmp_bpf_disasm scmp_bpf_sim
+bin_PROGRAMS = \
+	scmp_sys_resolver
+noinst_PROGRAMS = \
+	scmp_arch_detect \
+	scmp_bpf_disasm \
+	scmp_bpf_sim
 
-scmp_sys_resolver_LDADD   = ../src/libseccomp-internal.la
-scmp_arch_detect_LDADD    = ../src/libseccomp-internal.la
+scmp_sys_resolver_LDADD = ../src/libseccomp-internal.la
+scmp_arch_detect_LDADD = ../src/libseccomp-internal.la
 scmp_bpf_disasm_LDADD = util.la
 scmp_bpf_sim_LDADD = util.la
