--- a/Makefile.am
+++ b/Makefile.am
@@ -27,3 +27,6 @@ AM_MAKEFLAGS_0 = --quiet --no-print-directory
 AM_MAKEFLAGS_1 =
 AM_MAKEFLAGS_ = ${AM_MAKEFLAGS_0}
 AM_MAKEFLAGS = ${AM_MAKEFLAGS_@AM_V@}
+
+check-syntax:
+	@./tools/check-syntax
