--- a/src/python/Makefile.am
+++ b/src/python/Makefile.am
@@ -35,11 +35,11 @@ PY_INSTALL = ${PY_DISTUTILS} install
 
 all-local: build
 
-build: ../libseccomp-internal.la libseccomp.pxd seccomp.pyx
+build: ../libseccomp-internal.la libseccomp.pxd seccomp.pyx setup.py
 	${PY_BUILD} && touch build
 
 install-exec-local: build
 	${PY_INSTALL} --prefix=${DESTDIR}/${prefix}
 
 clean-local:
-	${RM} -rf seccomp.c build/
+	${RM} -rf seccomp.c build
