build: create a 'check-build' target
Sometimes it is helpful to build the test without executing them, add
a new target, 'check-build' to do just that.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -55,5 +55,8 @@ check_PROGRAMS = \
 
 EXTRA_PROGRAMS = 00-test
 
+check-build:
+	${MAKE} ${AM_MAKEFLAGS} ${check_PROGRAMS}
+
 clean-local:
 	${RM} -f 00-test *.pyc
