doc: fix a missing manpage link
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -24,6 +24,7 @@ man3_MANS = \
 	man/man3/seccomp_arch_exist.3 \
 	man/man3/seccomp_arch_native.3 \
 	man/man3/seccomp_arch_remove.3 \
+	man/man3/seccomp_arch_resolve_name.3 \
 	man/man3/seccomp_attr_get.3 \
 	man/man3/seccomp_attr_set.3 \
 	man/man3/seccomp_export_bpf.3 \
