tests: create a simple program to test the internal syscall tables
This patch adds a dead simple, and a bit hack-ish, little program that
checks the internal syscall tables for consistency across the different
supported architectures.  We also tie this test into the autotools test
infrastructure.  This should be of particular importance when adding
or updating architectures.

This patch also fixed some automake/libtool problems which were causing
us to double-build some objects under src/.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,7 @@ AM_MAKEFLAGS_ = ${AM_MAKEFLAGS_0}
 AM_MAKEFLAGS = ${AM_MAKEFLAGS_@AM_V@}
 
 check-build: all
+	${MAKE} ${AM_MAKEFLAGS} -C src check-build
 	${MAKE} ${AM_MAKEFLAGS} -C tests check-build
 
 check-syntax:
