--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,26 +21,36 @@ if ENABLE_PYTHON
 SUBDIRS += python
 endif
 
-SOURCES = \
-	api.c arch.c db.c gen_pfc.c gen_bpf.c hash.c \
-	arch-x86.c arch-x86-syscalls.c \
-	arch-x86_64.c arch-x86_64-syscalls.c \
-	arch-x32.c arch-x32-syscalls.c \
-	arch-arm.c arch-arm-syscalls.c \
-	arch-mips.c arch-mips-syscalls.c \
-	\
-	arch.h db.h gen_bpf.h gen_pfc.h hash.h system.h \
-	arch-x86.h arch-x86_64.h arch-x32.h\
-	arch-arm.h \
-	arch-mips.h
+SOURCES_ARCH = \
+	arch.c arch.h \
+	arch-x86.h arch-x86.c arch-x86-syscalls.c \
+	arch-x86_64.h arch-x86_64.c arch-x86_64-syscalls.c \
+	arch-x32.h arch-x32.c arch-x32-syscalls.c \
+	arch-arm.h arch-arm.c arch-arm-syscalls.c \
+	arch-mips.h arch-mips.c arch-mips-syscalls.c
+
+SOURCES_GEN = \
+	api.c system.h \
+	db.h db.c \
+	hash.h hash.c \
+	gen_pfc.h gen_pfc.c gen_bpf.h gen_bpf.c
+
+TESTS = arch-syscall-check
+
+check_PROGRAMS = arch-syscall-check
 
 noinst_LTLIBRARIES = libseccomp-internal.la
-
-libseccomp_internal_la_SOURCES = ${SOURCES}
-
 lib_LTLIBRARIES = libseccomp.la
 
-libseccomp_la_SOURCES = ${SOURCES}
+arch_syscall_check_SOURCES = arch-syscall-check.c
+arch_syscall_check_LDADD = libseccomp-internal.la
+
+libseccomp_internal_la_SOURCES = ${SOURCES_GEN} ${SOURCES_ARCH}
+
+libseccomp_la_SOURCES = libseccomp-internal.la
 libseccomp_la_CFLAGS = -fvisibility=hidden
 libseccomp_la_LDFLAGS = \
 	-version-number ${VERSION_MAJOR}:${VERSION_MINOR}:${VERSION_MICRO}
+
+check-build:
+	${MAKE} ${AM_MAKEFLAGS} ${check_PROGRAMS}
