--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -1196,6 +1196,31 @@ int seccomp_export_bpf(const scmp_filter_ctx ctx, int fd);
 #define __NR_vfork		__PNR_vfork
 #endif /* __NR_vfork */
 
+#define __PNR_cachectl		-10103
+#ifndef __NR_cachectl
+#define __NR_cachectl		__PNR_cachectl
+#endif /* __NR_cachectl */
+
+#define __PNR_cacheflush	-10104
+#ifndef __NR_cacheflush
+#define __NR_cacheflush		__PNR_cacheflush
+#endif /* __NR_cacheflush */
+
+#define __PNR_renameat2		-10105
+#ifndef __NR_renameat2
+#define __NR_renameat2		__PNR_renameat2
+#endif /* __NR_renameat2 */
+
+#define __PNR_sysmips		-10106
+#ifndef __NR_sysmips
+#define __NR_sysmips		__PNR_sysmips
+#endif /* __NR_sysmips */
+
+#define __PNR_timerfd		-10107
+#ifndef __NR_timerfd
+#define __NR_timerfd		__PNR_timerfd
+#endif /* __NR_sysmips */
+
 #ifdef __cplusplus
 }
 #endif
