build: don't build arch-syscall-dump by default
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,9 +37,7 @@ SOURCES_GEN = \
 
 TESTS = arch-syscall-check
 
-noinst_PROGRAMS = arch-syscall-dump
-
-check_PROGRAMS = arch-syscall-check
+check_PROGRAMS = arch-syscall-check arch-syscall-dump
 
 noinst_LTLIBRARIES = libseccomp-internal.la
 lib_LTLIBRARIES = libseccomp.la
