--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -17,7 +17,7 @@
 #
 
 noinst_LTLIBRARIES = util.la
-util_la_SOURCES = util.c util.h
+util_la_SOURCES = util.c util.h bpf.h
 util_la_LDFLAGS = -module
 
 bin_PROGRAMS = \
@@ -26,6 +26,9 @@ noinst_PROGRAMS = \
 	scmp_arch_detect \
 	scmp_bpf_disasm \
 	scmp_bpf_sim
+
+scmp_bpf_disasm_SOURCES = scmp_bpf_disasm.c bpf.h util.h
+scmp_bpf_sim_SOURCES = scmp_bpf_sim.c bpf.h util.h
 
 scmp_sys_resolver_LDADD = ../src/libseccomp-internal.la
 scmp_arch_detect_LDADD = ../src/libseccomp-internal.la
