arch: add mips64n32 support
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -126,8 +126,10 @@ struct scmp_arg_cmp {
  */
 #define SCMP_ARCH_MIPS		AUDIT_ARCH_MIPS
 #define SCMP_ARCH_MIPS64	AUDIT_ARCH_MIPS64
+#define SCMP_ARCH_MIPS64N32	AUDIT_ARCH_MIPS64N32
 #define SCMP_ARCH_MIPSEL	AUDIT_ARCH_MIPSEL
 #define SCMP_ARCH_MIPSEL64	AUDIT_ARCH_MIPSEL64
+#define SCMP_ARCH_MIPSEL64N32	AUDIT_ARCH_MIPSEL64N32
 
 /**
  * Convert a syscall name into the associated syscall number
