--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -56,6 +56,7 @@ enum scmp_filter_attr {
 	SCMP_FLTATR_ACT_DEFAULT = 1,	/**< default filter action */
 	SCMP_FLTATR_ACT_BADARCH = 2,	/**< bad architecture action */
 	SCMP_FLTATR_CTL_NNP = 3,	/**< set NO_NEW_PRIVS on filter load */
+	SCMP_FLTATR_CTL_TSYNC = 4,	/**< sync threads on filter load */
 	_SCMP_FLTATR_MAX,
 };
 
