--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,6 +27,7 @@ SOURCES_ARCH = \
 	arch-x86_64.h arch-x86_64.c arch-x86_64-syscalls.c \
 	arch-x32.h arch-x32.c arch-x32-syscalls.c \
 	arch-arm.h arch-arm.c arch-arm-syscalls.c \
+	arch-aarch64.h arch-aarch64.c arch-aarch64-syscalls.c \
 	arch-mips.h arch-mips.c arch-mips-syscalls.c \
 	arch-mips64.h arch-mips64.c arch-mips64-syscalls.c \
 	arch-mips64n32.h arch-mips64n32.c arch-mips64n32-syscalls.c
