--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -127,9 +127,19 @@ struct scmp_arg_cmp {
  */
 #define SCMP_ARCH_MIPS		AUDIT_ARCH_MIPS
 #define SCMP_ARCH_MIPS64	AUDIT_ARCH_MIPS64
+#ifndef AUDIT_ARCH_MIPS64N32
+/* MIPS64N32 support was merged in 3.15 */
+#define AUDIT_ARCH_MIPS64N32	(EM_MIPS|__AUDIT_ARCH_64BIT|\
+				 __AUDIT_ARCH_CONVENTION_MIPS64_N32)
+#endif
 #define SCMP_ARCH_MIPS64N32	AUDIT_ARCH_MIPS64N32
 #define SCMP_ARCH_MIPSEL	AUDIT_ARCH_MIPSEL
 #define SCMP_ARCH_MIPSEL64	AUDIT_ARCH_MIPSEL64
+#ifndef AUDIT_ARCH_MIPSEL64N32
+/* MIPSEL64N32 support was merged in 3.15 */
+#define AUDIT_ARCH_MIPSEL64N32	(EM_MIPS|__AUDIT_ARCH_64BIT|__AUDIT_ARCH_LE|\
+				 __AUDIT_ARCH_CONVENTION_MIPS64_N32)
+#endif
 #define SCMP_ARCH_MIPSEL64N32	AUDIT_ARCH_MIPSEL64N32
 
 /**
