build: fixup b6da7a923a6200b115b5f48be7377e59b1537c3e
As noted in the previous commit, I made some style changes, but forgot
to include them in the commit.  This patch includes those tweaks.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -31,12 +31,11 @@ AC_CONFIG_MACRO_DIR([m4])
 dnl ####
 dnl automake configuration
 dnl ####
-dnl Initialize automake.  automake < 1.12 didn't have serial-tests and
-dnl gives an error if it sees this, but for automake >= 1.13
-dnl serial-tests is required so we have to include it.  Solution is to
-dnl test for the version of automake (by running an external command)
-dnl and provide it if necessary.  Note we have to do this entirely using
-dnl m4 macros since automake queries this macro by running
+dnl NOTE: Automake < 1.12 didn't have serial-tests and gives an error if it
+dnl sees this, but for automake >= 1.13 serial-tests is required so we have to
+dnl include it.  Solution is to test for the version of automake (by running
+dnl an external command) and provide it if necessary.  Note we have to do this
+dnl entirely using m4 macros since automake queries this macro by running
 dnl 'autoconf --trace ...'.
 m4_define([serial_tests], [
     m4_esyscmd([automake --version |
@@ -44,7 +43,8 @@ m4_define([serial_tests], [
                 awk '{split ($NF,a,"."); if (a[1] == 1 && a[2] >= 12) { print "serial-tests" }}'
     ])
 ])
-AM_INIT_AUTOMAKE(-Wall foreign subdir-objects tar-pax serial_tests) dnl NB: Do not [quote] this parameter.
+dnl # NOTE: do not [quote] this parameter
+AM_INIT_AUTOMAKE(-Wall foreign subdir-objects tar-pax serial_tests)
 
 dnl ####
 dnl build tools
