--- a/Makefile.am
+++ b/Makefile.am
@@ -22,6 +22,8 @@ SUBDIRS = include src tools tests doc
 pkgconfdir = ${libdir}/pkgconfig
 pkgconf_DATA = libseccomp.pc
 
+EXTRA_DIST = CHANGELOG CREDITS LICENSE README SUBMITTING_PATCHES
+
 # support silent builds
 AM_MAKEFLAGS_0 = --quiet --no-print-directory
 AM_MAKEFLAGS_1 =
