arch: add a ppc syscall table
Signed-off-by: Bogdan Purcareata <bogdan.purcareata@freescale.com>
[PM: slight reordering of ppc/ppc64 in header files and makefiles]
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -153,6 +153,7 @@ struct scmp_arg_cmp {
 /**
  * The PowerPC architecture tokens
  */
+#define SCMP_ARCH_PPC		AUDIT_ARCH_PPC
 #define SCMP_ARCH_PPC64		AUDIT_ARCH_PPC64
 #ifndef AUDIT_ARCH_PPC64LE
 #define AUDIT_ARCH_PPC64LE	(EM_PPC64|__AUDIT_ARCH_64BIT|__AUDIT_ARCH_LE)
