tests: test the bpf accumulator checking logic
When building the BPF filter code we need to ensure that we take the
state of the BPF state machine accumulator into account.  This test
creates a situation where the BPF filter code generator needs to
perform some extra work to ensure the accumulator state is correct.

This test is based on a bug reproducer by Matthew Heon.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -51,7 +51,8 @@ check_PROGRAMS = \
 	23-sim-arch_all_le_basic \
 	24-live-arg_allow \
 	25-sim-multilevel_chains_adv \
-	26-sim-arch_all_be_basic
+	26-sim-arch_all_be_basic \
+	27-sim-bpf_blk_state
 
 EXTRA_DIST_TESTPYTHON = \
 	util.py \
