arm: fix some problems with the syscall table
The 32-bit ARM syscall table mistakenly included syscall definitions
for the syscalls below.  This patch redefines those syscalls to
libseccomp's pseudo-syscall numbers and corrects the
arch-syscall-validate to correctly list the 32-bit ARM syscalls.

 * time
 * umount
 * stime
 * alarm
 * utime
 * getrlimit
 * select
 * readdir
 * mmap
 * socketcall
 * syscall
 * ipc

Reported-by: Andreas Farber <afaerber@suse.de>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -1424,6 +1424,16 @@ int seccomp_export_bpf(const scmp_filter_ctx ctx, int fd);
 #define __NR_utimes		__PNR_utimes
 #endif /* __NR_utimes */
 
+#define __PNR_getrlimit		-10180
+#ifndef __NR_getrlimit
+#define __NR_getrlimit		__PNR_getrlimit
+#endif /* __NR_utimes */
+
+#define __PNR_mmap		-10181
+#ifndef __NR_mmap
+#define __NR_mmap		__PNR_mmap
+#endif /* __NR_utimes */
+
 #ifdef __cplusplus
 }
 #endif
