--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,7 +30,8 @@ SOURCES_ARCH = \
 	arch-aarch64.h arch-aarch64.c arch-aarch64-syscalls.c \
 	arch-mips.h arch-mips.c arch-mips-syscalls.c \
 	arch-mips64.h arch-mips64.c arch-mips64-syscalls.c \
-	arch-mips64n32.h arch-mips64n32.c arch-mips64n32-syscalls.c
+	arch-mips64n32.h arch-mips64n32.c arch-mips64n32-syscalls.c \
+	arch-s390x.h arch-s390x.c arch-s390x-syscalls.c
 
 SOURCES_GEN = \
 	api.c system.h system.c \
