arch: add support for s390
This patch adds support for S390 (32-bit) architecture.

Signed-off-by: Jan Willeke <willeke@linux.vnet.ibm.com>
[PM: rewrote the subject line, style fixes, s390x/s390 typo bugfixes]
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -163,6 +163,11 @@ struct scmp_arg_cmp {
 #define SCMP_ARCH_MIPSEL64N32	AUDIT_ARCH_MIPSEL64N32
 
 /**
+ * The S390 architecture token
+ */
+#define SCMP_ARCH_S390		AUDIT_ARCH_S390
+
+/**
  * The S390X architecture token
  */
 #define SCMP_ARCH_S390X		AUDIT_ARCH_S390X
