--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -16,6 +16,8 @@
 # along with this library; if not, see <http://www.gnu.org/licenses>.
 #
 
+AM_CPPFLAGS = -I$(top_builddir)/include
+
 noinst_LTLIBRARIES = util.la
 util_la_SOURCES = util.c util.h bpf.h
 util_la_LDFLAGS = -module
